@@ -204,4 +204,4 @@ would be mandatory, in the current specification system.
      <dd>
  An attribute named a_nokind, with unspecified kind.
 </dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 19:21:02 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue Apr  8 18:17:03 2008</div></body></html>
