@@ -194,6 +194,9 @@ class Seq(RE):
     def __repr__(self):
 	return '%s(%s)'%(self.__class__.__name__, ', '.join(['%r'%(x,) for x in self]))
 
+    def __hash__(self):
+        return hash(repr(self))
+
     def apseq(self, ap):
 	ap(self)
 
